--- a/index.html
+++ b/index.html
@@ -278,9 +278,8 @@ Won't compute counts for results
 			<p class="question"> 15. Is the patient suddenly irritable, agitated, or depressed?</p>
 				<!--/ Question 15 --> 
 			<ul class="answers">
-			<input onclick="emotionalwholeAdd();" type="radio"name="q15"value="a"id="q15a"><label for="q15a"> Yes, 2 or more of the above</label><br/>
-			<input onclick="emotionalhalfAdd();" type="radio"name="q15"value="b"id="q15b"><label for="q15b"> Yes, one of the above</label><br/>
-			<input type="radio"name="q15"value="c"id="q15c"><label for="q15c"> No, none of the above</label><br/>
+			<input onclick="emotionalwholeAdd();" type="radio"name="q15"value="a"id="q15a"><label for="q15a"> Yes</label><br/>
+			<input type="radio"name="q15"value="c"id="q15c"><label for="q15c"> No</label><br/>
 				<!--Answers to question 15 -->
 			</ul><!--end of question 15 -->		
 		
