--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Won't compute counts for results
 
 	<head>
 		<t1 style="font-family:arial;">DIY Diagnostics</t1>
-	      <title> Concussion Diagnostic </title>  
+	      <title> Concussion </title>  
 	      <meta name="viewport" content="width=device-width, initial-scale=1">
 	      <meta name="apple-mobile-web-app-capable" content="yes">
 	      <link rel="stylesheet" href="w3.css">
@@ -113,7 +113,7 @@ Won't compute counts for results
 
 	<body>
 	<div id="header" class="w3-container w3-blue-gray">
-		<h1>Concussion Diagnosis/h1>
+		<h1>Concussion Diagnosis</h1>
 	</div>
 		
 	<div id="content" class="w3-container">
