--- a/index.html
+++ b/index.html
@@ -517,6 +517,8 @@ Won't compute counts for results
 			
 			<a href="#five" onclick="result();" data-role="button"> Results</a>
 			<p id="result"></p>
+			<a href="#five" onclick="table();" data-role="button"> Interpret Results</a>
+		
 			<p>Thanks for using the app!</p>
 		
 			<br>
