--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Won't compute counts for results
 			var emotional_count = 0
 			var sleep_count = 0			
 		} 
-		/* This function will show the table. */
+		/* This function will show the table.
 		function table(){
 			<table>
  				<tr>
@@ -122,7 +122,7 @@ Won't compute counts for results
 					<th>51-79%</th>
 					<th>80-100%</th>
 				</tr>
-			</table>
+			</table> */
 			}		
 	</script>
 	
@@ -517,7 +517,8 @@ Won't compute counts for results
 			
 			<a href="#five" onclick="result();" data-role="button"> Results</a>
 			<p id="result"></p>
-			<a href="#five" onclick="table();" data-role="button"> Interpret Results</a>
+
+			<!-- <a href="#five" onclick="table();" data-role="button"> Interpret Results</a> -->
 		
 			<p>Thanks for using the app!</p>
 		
